# transfer

./: CMakeLists.txt  README  images.qrc  qml.qrc  transfer.pro
qml/: OnlineStatusAvatar.qml  SelectionStatus.qml  UserDelegate.qml  main.qml
qml/TransferList/: AcceptDeclineButton.qml  TransferDelegate.qml
qml/sendfile/: Avatar.qml  OnlineStatusAvatar.qml  UserDelegate.qml  main.qml
sql/: db.sql
src/: CMakeLists.txt  connectioncenter.cpp  connectioncenter.h  core.cpp  core.h  dbhandler.cpp  dbhandler.h  device.cpp  device.h  discoverer.cpp  discoverer.h  filetransfer.cpp  filetransfer.h  filetransferlist.cpp  filetransferlist.h  main.cpp  mainwindow.cpp  mainwindow.h  parser.cpp  parser.h  settings.cpp  settings.h  systray.cpp  systray.h  transferreceivejob.cpp  transferreceivejob.h  transfersendjob.cpp  transfersendjob.h  user.cpp  user.h  userlist.cpp  userlist.h
src/dialogs/: settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
testapp/: CMakeLists.txt  commanddispatcher.cpp  commanddispatcher.h  main.cpp
